deployments/rpi4/apps/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: rpiuav
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
