deployments/rpi4/apps/router.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: router
  name: router
  namespace: rpiuav
spec:
  replicas: 1
  selector:
    matchLabels:
      app: router-recreate-strategy
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: router-recreate-strategy
    spec:
      containers:
      - image: registry.gitlab.com/got.vision/rpiuav/router:1.0.85
        name: router-recreate-strategy
        ports:
        - containerPort: 5760
        - containerPort: 14560
        - containerPort: 14561
        securityContext:
          privileged: true
        volumeMounts:
        - mountPath: /etc/mavlink-router
          name: main-conf
        - mountPath: /dev/serial0
          name: serial
      hostNetwork: true
      volumes:
      - configMap:
          items:
          - key: ROUTER_CONFIG
            path: main.conf
          name: rpi4-config
        name: main-conf
      - hostPath:
          path: /dev/serial0
        name: serial
