deployments/rpi4/apps/streamer.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: streamer
  name: streamer
  namespace: rpiuav
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamer-recreate-strategy
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: streamer-recreate-strategy
    spec:
      containers:
      - env:
        - name: CAMERA_PIPELINE0
          valueFrom:
            configMapKeyRef:
              key: STREAMER_CAMERA_PIPELINE0
              name: rpi4-config
        - name: VIDEO_PORT
          value: "8554"
        image: registry.gitlab.com/got.vision/rpiuav/streamer:1.0.151
        name: streamer-recreate-strategy
        ports:
        - containerPort: 8554
        securityContext:
          privileged: true
        volumeMounts:
        - mountPath: /run/udev
          name: udev
      hostNetwork: true
      volumes:
      - hostPath:
          path: /run/udev
        name: udev
