deployments/rpi4/apps/companion-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: companion-ingress
  namespace: rpiuav
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: companion-service
            port:
              number: 80
