deployments/rpi4/apps/companion-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: companion-service
  namespace: rpiuav
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 4000
  selector:
    app.kubernetes.io/name: companion-deployment
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: companion-ingress
  namespace: rpiuav
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: companion-service
            port:
              number: 4000
